--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,9 @@
      restart: unless-stopped
      build:
        context: .
+     ports:
+       - "8080:80"
      environment:
-       ECOFOREST_URL: http://proxy-or-real
-       ECOFOREST_USERNAME: xxx
-       ECOFOREST_PASSWORD: yyy
+       ECOFOREST_URL: http://ecoforest
+       #ECOFOREST_USERNAME: xxx
+       #ECOFOREST_PASSWORD: yyy
